Romanian language update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6088 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -50,8 +50,6 @@ foxtrick.AlertCustomOff.Guestbook.desc=Cartea de Oaspeti
 foxtrick.AlertCustomOff.MailToMe.desc=Mesaj nou
 foxtrick.AlertCustomOff.MyHTMessages.desc=Mesaje MyHt
 foxtrick.MedianTransferPrice.desc=Arata mediana preturilor de transfer in 'Compara transferul'
-foxtrick.YouthSkillNotes.desc=Permite editarea calitatilor juniorilor si le afiseaza asa cum sunt si pentru jucatorii echipei de seniori
-foxtrick.YouthSkillNotes.OnlyOwnTeam.desc=Arata doar calitatile juniorilor proprii
 foxtrick.FlagCollectionToMap.desc=Arata o harta a lumii cu toate tarile ale caror steaguri le-ati colectat in fiecare categorie
 foxtrick.TransferSearchFilters.desc=Permite adaugarea unor sabloane cu filtre de cautare pentru lista de transferuri
 foxtrick.TransferSearchResultFilters.desc=Filtre aditionale pentru filtrarea rezultatelor listei de transferuri
@@ -170,6 +168,7 @@ foxtrick.TeamSelectBox.desc=Inlocuieste lista jucatorilor cu o casuta de selecta
 foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=Adauga de asemenea o casuta de selectare in pagina jucatorilor la tineret
 foxtrick.CopyPlayerAd.desc=Un buton pe pagina jucatorului pentru a putea copia un detaliile unui jucator in clipboard (format ht-ml)
 foxtrick.CopyPlayerAd.Sorted.desc=Sorteaza calitatile in ordine descrescatoare.
+foxtrick.CopyPlayerAd.NonTableStyle.desc=Copiaza fara tabel.
 foxtrick.CustomMedals.desc=inlocuieste noile medalii Hattrick cu cele vechi
 foxtrick.SeniorTeamShortCuts.desc=Adauga link-urile 'Antrenor' si 'Ultima asezare' la echipele de seniori
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Arata doar pe paginile altor echipe
@@ -256,11 +255,9 @@ foxtrick.LeagueNewsFilter.all.desc=Arata toate stirile
 foxtrick.LeagueNewsFilter.friendlies.desc=Arata doar stiri despre amicale si antrenori noi
 foxtrick.LeagueNewsFilter.transfers.desc=Arata stiri doar despre transferuri
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Arata stiri doar despre schimbarile ordinelor
-foxtrick.LeagueNewsFilter.PAs.desc=Arata doar declaratiile de presa
 foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Evidentiaza echipele care si-au schimbat line up-ul recent in tabelul meciurilor urmatoare
 foxtrick.LeagueNewsFilter.highlight_wins.desc=Evidentiaza echipele castigatoare in tabelul meciurilor jucate
 foxtrick.LeagueNewsFilter.gray_bots.desc=Coloreaza echipele bot si fara proprietari in ambele tabele de meciuri
-foxtrick.ShortPAs.desc=Arata doar titlul declaratiilor de presa
 foxtrick.MoveManagerOnline.desc=Muta managerii online pe pagina regiunilor. Atentie! Va functiona foarte incet daca numarul managerilor online depaseste 100.
 foxtrick.TeamPopupLinks.OpenNewTab.desc=Deschide teampopup-urile in taburi noi
 foxtrick.TeamPopupLinks.TeamLinks.desc=Adauga TeamPopupLinks la linkurile echipei
@@ -310,10 +307,6 @@ foxtrick.SkillColoring.skill_select.desc=Arata calitatile si ca numere si la tra
 foxtrick.SkillColoring.no_skill_links.desc=Ascunde fontul verde dat de HT-i
 foxtrick.BackgroundFixed.desc=Imagine fundal statica.
 foxtrick.MatchIncome.desc=Venituri meci in pagina detaliata a meciului
-foxtrick.CrossTable.allway_show_cross.desc=Arata mereu Tabelul incrucisat
-foxtrick.CrossTable.allway_show_graph.desc=Arata mereu graficul seriei
-CrossTable.graph=Grafic sezon
-CrossTable.table=Tabel incrucisat al sezonului
 foxtrick.YouthSkillHideUnknown.desc=Mai mult spatiu la pagina juniorilor
 foxtrick.YouthSkillHideUnknown.desc=Ascunde calitatile juniorilor care sunt necunoscute
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Ascunde cuvantul 'maxim' pentru a castiga spatiu
@@ -352,6 +345,19 @@ foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista tag-uri, exemple: NT, idee, Bug.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista alba a topicurilor dupa ID. Topicurile din lista alba nu vor fi ignorate.
 foxtrick.TableSort.desc=Fac toate tabelele sortabile daca au antet. (inclusiv tabelele de pe forum)
 foxtrick.LiveAlert.desc=Alerteaza golurile din HT Live
+foxtrick.SeriesFlags.desc=Arata seria si steagul langa linkurile userului/seriei (imagini furnizate de HTMS)
+foxtrick.SeriesFlags.Guestbook.desc=Arata in cartea de oaspeti
+foxtrick.SeriesFlags.Supporters.desc=Arata in casuta supporterilor echipei
+foxtrick.SeriesFlags.Visitors.desc=Arata casuta vizitatorilor recenti
+foxtrick.SeriesFlags.Oldies.desc=Arata in pagina echipei cu vechii jucatori sau antrenori
+foxtrick.HTMSPoints.desc=Arata punctele de antrenament pentru un jucator calculate cu tabelul calitatilor HTMS
+foxtrick.HTMSPoints.AddToPlayer.desc=Arata pe pagina jucatorului
+foxtrick.HTMSPoints.AddToSearchResult.desc=Arata pe pagina transferurilor
+foxtrick.HTMSPoints.AddToPlayerList.desc=Arata pe pagina cu lista jucatorilor
+foxtrick.FriendlyInterface.desc=Modificari pentru a furniza o interfata prietenoasa
+foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Arata numele jucatorilor fara elipse in pagina ordinelor meciurilor
+foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Afiseaza echipele nationale ca linkuri pentru jucatorii din loturile nationale
+foxtrick.FriendlyInterface.HideAnswerTo.desc=Ascunde linkul de a raspunde din cartea de oaspeti
 -----------------------------------------------------------------------------
 
 
@@ -421,11 +427,6 @@ foxtrick.LeagueNewsFilter.all=Toate
 foxtrick.LeagueNewsFilter.friendlies=Amicale si antrenor noi
 foxtrick.LeagueNewsFilter.transfers=Transferuri
 foxtrick.LeagueNewsFilter.lineup_changes=Schimbarea ordinelor de meci
-foxtrick.LeagueNewsFilter.PAs=Declaratii de presa
-foxtrick.ShortPAs.more=mai multe..
-
-#gotoPostBox
-button.go=Mergi!
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Click pe butonul 'Salveaza' pe pagina urmatoare pentru a parasi acest forum.
@@ -441,7 +442,6 @@ template_exists=Sablonul exista deja sau este gol
 template_title=Nume sablon:
 template_title_illegal='[' si ']' sunt interzise in numele sabloanelor
 delete_template_ask=stergere sablon?
-ok=OK
 
 #PostPreview
 show_preview_from_post=Previzualizare mesaj
@@ -496,13 +496,7 @@ foxtrick.datetimestrings.short_days=zil
 transfercompare_medianprice=Pretul median
 transfercompare_avgprice=Pretul mediu
 
-
-#YouthPromote
-Notes_about_skills=Note despre calitatile jucatorilor
-Edit_notes=Editare note
-Save_notes=Salvare note
-
-#Skilltypes
+#Skills
 Playmaking=Constructie
 Playmaking.abbr=Pm
 Winger=Extrema
@@ -515,9 +509,13 @@ Defending=Aparare
 Defending.abbr=Ap
 Keeper=Portar
 Keeper.abbr=P
-#'Set pieces' (with a space) changed to 'Set_pieces' (with underscore). make sure it's changed in your local copy
 Set_pieces=Faze fixe
 Set_pieces.abbr=FF
+
+HTMS_Ability=Puncte abilitate HTMS
+HTMS_Ability.abbr=Abilitate
+HTMS_Potential=Puncte potential HTMS
+HTMS_Potential.abbr=Potential
 
 PlayerCategory=Categoria jucatorului
 PlayerCategory.abbr=Cat
@@ -606,16 +604,11 @@ Current_club.abbr=Echipa
 Current_league=Liga curenta
 Current_league.abbr=Liga
 
-#Skills
-weak=slab
-
-foxtrick.matchlineup.totalstars=Numarul total de stele:
-foxtrick.shortcuts.matchlineup=Scurtatura catre pagina asezarii in teren a jucatorilor
-foxtrick.shortcuts.leaveconference=Scurtatura paraseste conferinta
 foxtrick.matchdetail.midfield=Mijloc
 foxtrick.matchdetail.attack=Atac
 foxtrick.matchdetail.defence=Aparare
 foxtrick.shortcut.matchlineup=Asezare
+
 foxtrick.matchdetail.right=Dreapta
 foxtrick.matchdetail.center=Centru
 foxtrick.matchdetail.left=Stanga
@@ -631,8 +624,6 @@ foxtrick.ntremoveconfirmation=Esti sigur ca vrei sa adaugi/scoti acest jucator i
 foxtrick.confirmstripserver=Esti sigura ca vrei sa formezi linkuri din serverul hattrick pentru a le utiliza?
 foxtrick.conferences.signaturetoggle=Semnatura
 foxtrick.conferences.markunread=Marcheaza necitite de aici incolo
-foxtrick.tweaks.sendmessage=Trimite mesaj
-foxtrick.tweaks.sendmessageofficial=Luati aminte faptul ca mesajele catre oficiali trebuiesc trimite pe pagina de contact <a class='inner' href='/Help/Contact.aspx'>staff pages</a>. Sistemul interne de mesagerie nu este pentru a fi folosit pentru probleme legate de staff.
 foxtrick.tweaks.selectplayer=Alege jucator
 foxtrick.linkscustom.selecticon=Alege pictograma
 foxtrick.linkscustom.addpersonallink=Adauga link personal
@@ -668,7 +659,6 @@ foxtrick.onpagepreferences=Setari FoxTrick pe pagina curenta
 foxtrick.modules_allpages=Module care functioneaza pe toate paginile
 HTLanguageChanged=FoxTrick a detectat o schimbare a limbii. Limba FoxTrick este acum setata ca fiind %s.
 NewOrChangedModules=Urmatoarele module sunt noi sau au fost schimbate de la
-Screenshot=Imagine captura cu comentarii ale optiunilor modulelor
 PreferenceScreenshot=Imagine captura cu comentarii ale preferintelor FoxTrick
 FoxtrickFirstRunScreenshotList=Lista completa a capturilor comentate (Engleza):
 FoxtrickChangeLogHint=Duceti cursorul pe iconita '!' pentru a vedea ultimele modificari (Engleza).
@@ -685,16 +675,6 @@ FoxtrickFirstRunHelpPageLink=/Forum/Read.aspx?t=13254684
 StyleTutorial.title=Styling FoxTrick
 StyleTutorial.content=FoxTrick oferta un set de inferfete de prezentare pentru useri pentru a-si personaliza stilurile proprii.\n Aceste interfete sunt oferite prin intermediul claselor si idurilor HTML si ai putea utiliza CSS pentru a defini stilul preferat.\n Un exemplu de stil poate fi gasit la %s si poate fi modificat pentru a-ti satisface nevoile.\n Dupa salvarea fisierului poti utiliza modulul SkinPlugin pentru a incarca fisierul CSS pentru ca stilul sa aiba efect.
 
-# changes categories
-new=Nou
-fix=Reparat
-
-Close=Close
-SortBy=Sorteaza dupa
-Module=Modul
-PreferenceTab=Tab preferinte
-NewAfter=Noi dupa
-ChangeCategory=Tip
 Coach=Antrenor
 
 # NOTE TO TRANSLATORS
@@ -839,6 +819,16 @@ foxtrick.htmsStatistics.windrawloss=Victorie/Egalitate/Infrangere
 foxtrick.htmsStatistics.linkcaption=Analiza meci realizate de HTMS
 foxtrick.htmsStatistics.changePrediction=Schimba previziunea
 
+# HTMSPoints
+HTMSPoints=Puncte HTMS:
+HTMSPoints.AbilityAndPotential=Abilitate: %1 / Potential: %2
+
+# CrossTable
+CrossTable.graph=Graficul sezonului
+CrossTable.table=Tabel incrucisat
+# will be shown as "R13" denoting round 13
+CrossTable.round=R%s
+
 #actions
 Copy=Copiaza
 View=Vizualizeaza
@@ -849,6 +839,21 @@ Filter=Filtru
 button.ok=OK
 button.cancel=Anuleaza
 button.close=Inchide
+button.customize=Modifica
+button.save=Salveaza
+button.go=Go!
+button.authorize=Autorizeaza
+button.export=Export
+button.import=Import
+button.restoreDefault=Restaureaza setarile implicite
+button.disableAll=Dezactiveaza toate
+
+Loading=Incarca…
+
+oauth.authorize=Autorizeaza FoxTrick pentru a accesa datele echipei tale
+oauth.instructions=O noua pagina se va deschide in curand. Te rog adauga utilizatorul si parola pentru Hattrick pentru a obtine un cod de verificare. Copiaza codul de verificare aici pentru a autoriza FoxTrick sa acceseze datele echipei tale:
+oauth.success=FoxTrick a fost autorizat! Te rog reincarca aceasta pagina pentru a vedea informatii detaliate oferite de FoxTrick.
+oauth.unauthorized=Accesul data catre Hattrick nu a reusit. Trebuie sa autorizezi FoxTrick sa acceseze datele echipei intai.
 
 # End of IN-GAME STRINGS.
 
@@ -873,22 +878,13 @@ foxtrick.prefs.AlertTab=Alerte
 foxtrick.prefs.AboutTab=Despre
 foxtrick.prefs.ChangesTab=Modificari
 foxtrick.prefs.HelpTab=Ajutor
-foxtrick.prefs.links=Link catre intrebari despre forum si pagini de ajutor
-foxtrick.prefs.portal=Portal FoxTrick
-foxtrick.prefs.external_forum=Forum FoxTrick
-foxtrick.prefs.hattrick_forum=Forum FoxTrick (Hattrick)
-foxtrick.prefs.commented_screenshots=Screenshoturi comentate
-foxtrick.prefs.hex_color_editor=Link catre un editor de culori
 foxtrick.prefs.basicPreferences=Preferinte de baza
 foxtrick.prefs.captionHTLanguage=Setari limba
-foxtrick.prefs.captionHTCurrency=Setari moneda
 foxtrick.prefs.captionHTDateformat=Setari format data
 foxtrick.prefs.captionHTCountry=Setari tara
 foxtrick.prefs.captionShowOnStatusBar=Afiseaza pictograma status
 foxtrick.prefs.captionCleanupBranch=Preferinte stocate
 foxtrick.prefs.captionLoadSavePrefs=Exporta si importa preferinte
-foxtrick.prefs.captionCurrencySymbolTo=Transforma moneda curenta in
-foxtrick.prefs.captionCurrencyConverter=Conversie moneda
 foxtrick.prefs.statusbarpref=Afiseaza iconita FoxTrick in status (necesita restart)
 foxtrick.prefs.captionAlertSettings=Setari alerta
 foxtrick.FoxtrickAlert.AlertSlider.desc=Arata alerta glisanta
@@ -898,31 +894,39 @@ foxtrick.prefs.labelCleanupBranch=Restaureaza setarile implicite. (doar setari i
 foxtrick.prefs.labelDisableAll=Dezactiveazate toate modulele FoxTrick
 foxtrick.prefs.labelSavePrefs=Exporta preferinte si setari personale
 foxtrick.prefs.labelSavePrefs=Exporta preferinte
+foxtrick.prefs.labelSavePrefs_Prefs=Preferinte
 foxtrick.prefs.labelSavePrefs_Notes=Exporta setari personale (notari, sabloane & linkuri personalizate)
-foxtrick.prefs.labelLoadPrefs=Importa preferinte (Setarile curente pot fi modificate. Necesita restart)
+foxtrick.prefs.saveNotice=Copiaza continutul in casuta text si salveaza ca un fisier pentru a putea importa preferintele in viitor.
+foxtrick.prefs.labelLoadPrefs=Importa Import preferinte (Actualele vor fi inlocuite)
+foxtrick.prefs.loadNotice=Lipeste preferintele salvate in casuta text si apasa "Import" pentru a importa preferintele.
 foxtrick.prefs.captionDisableSettings=Dezactiveaza FoxTrick
 foxtrick.prefs.stagepref=Dezactiveaza pe serverul Stage
 foxtrick.prefs.disableTemporaryLabel=Dezactiveaza temporar
-foxtrick.prefs.saved=Preferinte salvate.
+foxtrick.prefs.saved=Preferinte salvate!
+foxtrick.prefs.loaded=Preferinte incarcate!
+foxtrick.prefs.dismissNotice=(click pentru a dezaproba notita)
 
-button.save=Salveaza
-foxtrick.prefs.buttonCancel=Anuleaza
-foxtrick.prefs.buttonExample=Exemplu
-button.customize=Modifica
-button.restoreDefault=Restaureaza implicite
-button.disableAll=Dezactiveaza toate
-button.export=Salveaza
-button.import=Incarca
-foxtrick.prefs.activeCurrencyConverter=Convertor monede(valuta) activat
+link.title=Linkuri
+link.homepage=Pagina de start
+link.bugTracker=Raporteaza un bug
+link.hattrickForum=Forum FoxTrick pe Hattrick
+link.screenshots=Capturi
+link.nightlyFirefox=Development builds for Firefox
+link.nightlyChrome=Development builds for Google Chrome
+link.recentChanges=Schimbari recente
 
+foxtrick.showReleaseNotes=Arata notele lansarii dupa updateul FoxTrick
+foxtrick.versionReleaseNotes=Arata notele lansarii pentru:
+
+about.copyright=Copyright
 about.headDevelopers=Developeri proiect
 about.projectOwners=Owneri proiect
 about.developers=Developeri
 about.translators=Translatori
 about.designers=Designeri
 
-delete_foxtrick_branches_ask=Esti sigur ca vrei sa restaurezi setarile implicite?\nFirefox trebuie restartat pentru a avea efect.
-disable_all_foxtrick_modules_ask=Esti sigur ca vrei sa dezactivezi toate modulele?\n
+delete_foxtrick_branches_ask=Esti sigur ca vrei sa restaurezi setarile implicite?
+disable_all_foxtrick_modules_ask=Esti sigur ca vrei sa dezactivezi toate modulele?
 
 foxtrick.prefs.AdditionalOptions=Alte optiuni
 foxtrick.prefs.smallcopyicons=Iconite mici de copiat in locul casutei separate
