locale/es_ca: update to r6084 by joseant.mg (#700).
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6090 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -53,8 +53,6 @@ foxtrick.AlertCustomOff.Guestbook.desc=Libro de Visitas
 foxtrick.AlertCustomOff.MailToMe.desc=Mail para mi
 foxtrick.AlertCustomOff.MyHTMessages.desc=Mensajes de MiHT
 foxtrick.MedianTransferPrice.desc=Muestra la mediana del precio en la página de comparación de transferencias
-foxtrick.YouthSkillNotes.desc=Permite editar las habilidades de los jugadores del equipo juvenil y mostrarlas del mismo modo que en el equipo mayor
-foxtrick.YouthSkillNotes.OnlyOwnTeam.desc=Mostrar unicamente las notas de juveniles para mi equipo
 foxtrick.FlagCollectionToMap.desc=Muestra un mapa con los países de los cuales has coleccionado sus banderas para cada categoría
 foxtrick.TransferSearchFilters.desc=Permite el uso de filtros de búsqueda dentro de la página de transferencias.
 foxtrick.TransferSearchResultFilters.desc=Filtros adicionales para ordenar los resultado de búsqueda, en la Lista de Transferencias.
@@ -132,7 +130,7 @@ foxtrick.AddDefaultFaceCard.desc=Muestra la cara por defecto para los usuarios d
 foxtrick.OriginalFace.desc=Muestra la cara orginal de los jugadores
 foxtrick.OriginalFace.HideTransfer.desc=Oculta las imagenes de transferencia en la cara del jugador
 foxtrick.OriginalFace.HideInjury.desc=Oculta las imagenes de lesión en la cara del jugador
-foxtrick.OriginalFace.HideSuspended.desc=Oculta las imagenes de suspención en la cara del jugador
+foxtrick.OriginalFace.HideSuspended.desc=Oculta las imagenes de suspensión en la cara del jugador
 foxtrick.OriginalFace.ColouredYouth.desc=Muestra la cara de los jugadores juveniles en colcor (puede causar problemas en Windows Vista)
 foxtrick.ConfirmActions.desc=Preguntar por confirmación antes de ciertas acciones
 foxtrick.ConfirmActions.Bid.desc=Ofertar por un jugador
@@ -170,6 +168,7 @@ foxtrick.TeamSelectBox.desc=Reemplaza la lista de jugadores por un cuadro de sel
 foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=También reemplaza la lista de jugadores por una caja de selección, en la página de jugadores del Equipo juvenil
 foxtrick.CopyPlayerAd.desc=Añade en la página del jugador, que permite copiar su información (en HT-ML)
 foxtrick.CopyPlayerAd.Sorted.desc=Ordenar las habilidades en orden descendente
+foxtrick.CopyPlayerAd.NonTableStyle.desc=Copiar en texto simple sin el estilo de tabla.
 foxtrick.CustomMedals.desc=Reemplaza las medallas del nuevo diseño de Hattrick, por las medallas del diseño antiguo
 foxtrick.SeniorTeamShortCuts.desc=Añade enlaces a Entrenador y Última Alineación de la página del equipo
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Mostrar unicamente en la página de otros equipos
@@ -254,11 +253,9 @@ foxtrick.LeagueNewsFilter.all.desc=Mostrar todas la noticias
 foxtrick.LeagueNewsFilter.friendlies.desc=Mostrar solo amistosos internacionales y cambio de entrenador
 foxtrick.LeagueNewsFilter.transfers.desc=Mostrar solo transferencias
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Mostrar solo cambios en la alineación
-foxtrick.LeagueNewsFilter.PAs.desc=Mostrar solo Anuncios de prensa
 foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Resaltar equipos que colocaron o cambiaron las ordenes de su partido en la ultima semana.
 foxtrick.LeagueNewsFilter.highlight_wins.desc=Resaltar equipos ganadores en los ultimos partidos de liga.
 foxtrick.LeagueNewsFilter.gray_bots.desc=Resaltar bots y equipos sin dueños en la tabla de partidos de liga.
-foxtrick.ShortPAs.desc=Muestra solo un enbezado expandible para los anuncios de prensa
 foxtrick.MoveManagerOnline.desc=Mueve la lista de managers en linea en la región. Precaución! Esto puede volverse muy lento si la lista de managers en línea es mayor a 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Añade ventana de enlaces a los enlaces del equipo
 foxtrick.TeamPopupLinks.UserLinks.desc=Añade ventana de enlaces a los enlaces al usuario
@@ -289,10 +286,6 @@ foxtrick.SkillColoring.skill_select.desc=Mostrar números en la página de trans
 foxtrick.SkillColoring.no_skill_links.desc=Esconde el subrayado y fuente color verde dadas por los HTs
 foxtrick.BackgroundFixed.desc=Imagen de fondo estática
 foxtrick.MatchIncome.desc=Ingreso del partido dentro del reporte del partido
-foxtrick.CrossTable.allway_show_cross.desc=Mostrar siempre la Tabla cruzada
-foxtrick.CrossTable.allway_show_graph.desc=Mostrar siempre la gráfica de la liga
-CrossTable.graph=Gráfica de la temporada
-CrossTable.table=Tabla cruzada de la temporada
 foxtrick.YouthSkillHideUnknown.desc=Más espacio en la página de jugadores juveniles
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Oculta las habilidades desconocidas de los juveniles, dentro de la página de jugadores
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Oculta la palabra 'máximo' para ganar más espacio, dentro de la página de jugadores juveniles, especialmente si las caras estan habilitadas
@@ -332,7 +325,20 @@ foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista de temas aceptados
 foxtrick.TableSort.desc=Convierte las tablas 'propiamente realizadas' ordenables, cuando cuenten con encabezado (incluyendo las tablas en los mensajes del foro)
 foxtrick.LiveAlert.desc=Alertar de log goles de HT Live
 foxtrick.OldStyleFace.desc=Mostrar caras en el estilo antiguo
-
+foxtrick.NtPeek.desc=Vista previa de los partidos de la Selección Nacional Mayor/U20 en MyHattrick
+foxtrick.SeriesFlags.desc=Mostrar banderas de la liga a un lado del enlance al equipo y/o nombre de usurio (imagenes gracias a HTMS)
+foxtrick.SeriesFlags.Guestbook.desc=Mostrar en el Libro de visitas
+foxtrick.SeriesFlags.Supporters.desc=Mostrar en la vista de supporters del equipo
+foxtrick.SeriesFlags.Visitors.desc=Mostrar en la sección de Visitas recientes
+foxtrick.SeriesFlags.Oldies.desc=Mostrar en página de jugadores promocionados y entrenador
+foxtrick.HTMSPoints.desc=Mostrar los puntos de entrenamientos para el jugador calculado con la tabla de habilidad de HTMS 
+foxtrick.HTMSPoints.AddToPlayer.desc=Mostrar en la página del jugador
+foxtrick.HTMSPoints.AddToSearchResult.desc=Mostrar en la página de transferencias
+foxtrick.HTMSPoints.AddToPlayerList.desc=Mostrar en la página de jugadores
+foxtrick.FriendlyInterface.desc=Ajustes para tener una interfaz más amigable
+foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Mostrar el nombre de los jugadores sin elipses en el reporte del partido
+foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Mostrar equipos nacionales como enlaces para los jugadores locales
+foxtrick.FriendlyInterface.HideAnswerTo.desc=Esconder enlaces para responder en el Libro de visitas
 # -----------------------------------------------------------------------------
 
 
@@ -358,9 +364,8 @@ foxtrick.HistoryStats.cupwinner=Ganador Copa
 foxtrick.HistoryStats.cupwinner.short=GC
 
 # YouthPromoteDays
-foxtrick.youthpromotedays.prom_d=El jugador puede ser promocionado en
-foxtrick.youthpromotedays.days=días.
-foxtrick.youthpromotedays.prom_t=El jugador puede ser promocionado hoy!
+YouthPromotes.future=El jugador puede ser promocionado %1 día(s) luego en %2.
+YouthPromotes.today=¡El jugador puede ser promocionado hoy!
 
 # links
 foxtrick.links.boxheader=Enlaces
@@ -402,11 +407,6 @@ foxtrick.LeagueNewsFilter.all=Todas
 foxtrick.LeagueNewsFilter.friendlies=Amistosos y cambios de entrenador
 foxtrick.LeagueNewsFilter.transfers=Transferencias
 foxtrick.LeagueNewsFilter.lineup_changes=Cambios Alineación
-foxtrick.LeagueNewsFilter.PAs=Anuncios de Prensa
-foxtrick.ShortPAs.more=más..
-
-#gotoPostBox
-button.go=Ir!
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Presiona 'Guardar' en la siguiente página para abandonar este foro.
@@ -422,10 +422,9 @@ template_exists=La plantilla ya existe o está vacía
 template_title=Nombre plantilla:
 template_title_illegal='[' y ']' son caracteres no permitidos
 delete_template_ask=¿Borrar plantilla?
-ok=OK
 
 #PostPreview
-show_preview_from_post=Mostrar Vista Previa del mensaje
+show_preview_from_post=Mostrar Vista previa del mensaje
 preview=Vista previa
 sendmessage=Enviar
 
@@ -478,12 +477,6 @@ foxtrick.datetimestrings.short_days=d
 transfercompare_medianprice=Mediana del precio
 transfercompare_avgprice=Precio promedio
 
-
-#YouthPromote
-Notes_about_skills=Notas sobre habilidades
-Edit_notes=Editar notas
-Save_notes=Guardar notas
-
 #Skill
 Playmaking=Jugadas
 Playmaking.abbr=JU
@@ -497,9 +490,13 @@ Defending=Defensa
 Defending.abbr=DF
 Keeper=Portería
 Keeper.abbr=PO
-#'Set pieces' (with a space) changed to 'Set_pieces' (with underscore). make sure it's changed in your local copy
 Set_pieces=Balón Parado
 Set_pieces.abbr=BP
+
+HTMS_Ability=Puntos de habilidad HTMS
+HTMS_Ability.abbr=Habilidad
+HTMS_Potential=Puntos de potencial HTMS
+HTMS_Potential.abbr=Potencial
 
 PlayerCategory=Categoría del jugador
 PlayerCategory.abbr=Ca
@@ -588,9 +585,6 @@ Current_club.abbr=Club
 Current_league=Liga Actual
 Current_league.abbr=Liga
 
-#Skills
-weak=débil
-
 foxtrick.matchdetail.midfield=Mediocampo
 foxtrick.matchdetail.attack=Ataque
 foxtrick.matchdetail.defence=Defensa
@@ -611,8 +605,6 @@ foxtrick.ntremoveconfirmation=¿Deseas añadir/remover este jugador del equipo?
 foxtrick.confirmstripserver=¿Deseas modficar los servidores de Hattrick en los enlaces, para hacerlos funcionar en el foro?
 foxtrick.conferences.signaturetoggle=Firma
 foxtrick.conferences.markunread=Marcar como no leído desde aquí
-foxtrick.tweaks.sendmessage=Enviar mensaje
-foxtrick.tweaks.sendmessageofficial=Por favor toma en cuenta que todas las cuestiones y preguntas al Staff deben ser enviadas a través de la forma en las <a class='inner' href='/Help/Contact.aspx'>paginas del staff</a>. El sistema interno del correo <b>no</b> es para ser usado para estas cuestiones.
 foxtrick.tweaks.selectplayer=Seleccionar jugador
 foxtrick.linkscustom.selecticon=Seleccionar icono
 foxtrick.linkscustom.addpersonallink=Añadir enlace persinalizado
@@ -640,35 +632,24 @@ foxtrick.defensiveTrainer=Un entrenador %s de mentalidad defensiva
 foxtrick.offensiveTrainer=Un entrenador %s de mentalidad ofensiva.
 foxtrick.balancedTrainer=Un entrenador %s que no es ni ofensivo ni defensivo.
 
+ntpeek.title=Partiodos recientes de la Selección
+
+htLive=HT Live
+
 foxtrick.onpagepreferences=Preferencias FoxTrick en la página
 foxtrick.modules_allpages=Módulos que se ejecutan en todas las páginas
 HTLanguageChanged=Has seleccionado en las preferencias de Foxtrick, que el idioma de Foxtrick se adapte automáticamente cuando escojas otro idiona en HT. El idioma de Foxtrick es: %s.
-Screenshot=Captura de pantalla de las caracteristicas del módulo
-# NOTE TO TRANSLATORS
-# You can use the following string to link to release notes in your language. The link better be generic, as you might not translate before actual release, i.e. link should be valid for all releases
-# NOTE TO TRANSLATORS
-# You can use the following string to link to a topic on Hattrick Forum in your language. In that case translate the string and replace 'languages' with your own language and add relative path to the forum topic in your national forum (go to your forum topic and copy link without 'http://www**.hattrick.org')
 
-StyleTutorial.title=Estilo FoxTrick
-StyleTutorial.content=FoxTrick provee un conjunto cambios en la presentación, para que los usuarios puedan personalizar sus propios estilos. \nEstos cambios se dan atraves de ids y clases HTML, adicionalmente puedes ysar CSS para definir tu estilo preferido. \nUn estilo de ejemplo puede ser encontrado en %s, puedes modificarlo deacuerdo a lo que necesites.\nLuego de guardar el archivo, puedes usar el módulo de SkinPlugin de FoxTrick para cargar el archivo CSS, para que surtan effectos tus cambios.
+StyleTutorial.title=Estilos de FoxTrick
+StyleTutorial.content=FoxTrick provee un conjunto de interfaces para usuarios que quieran personalizar sus estilos.\nEstos ajustes se dan atraves de ids HTML y clases, puedes usar CSS para definir tu estilo preferido.\nUn ejemplo de estilo de usuario puede ser encontrado en %s, el cual puedes modificar para que se ajuste a lo que necesitas.\nSi tienes un problema con el enlace, copia y pega el enlace en la barra de direcciones. Luego de guardad el archivo, puedes usar el odulo de SkinPlugin para cargar el archivo CSSpara que el estilo de usuario surta efecto.
 
-# changes categories
-new=Nuevo
-fix=Fijo
-
-Close=Cerrar
-SortBy=Ordenar por
-Module=Módulo
-PreferenceTab=Pestaña de Preferencias
-NewAfter=Nuevo despues
-ChangeCategory=Tipo
-Coach=Entrenador
+Coach=Coach
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 foxtrick.tweaks.actions=Acciones
 # Look on your players page (Club -> Players) to the box title on the right with the list of players
-foxtrick.tweaks.overview=Vista
+foxtrick.tweaks.overview=Vista general
 foxtrick.tweaks.writeinguestbook=Escribir en el Libro de Visitas
 foxtrick.tweaks.copyplayerad=Copiar anuncio de jugador al portapapeles
 foxtrick.tweaks.copied=El anuncio del jugador ha sido copiado al portapapeles
@@ -678,9 +659,9 @@ foxtrick.tweaks.copyratings.both=Copiar las calificaciones (código HT-ML)
 foxtrick.tweaks.copyratings.home=Copiar las calificaciones del equipo local (código HT-ML)
 foxtrick.tweaks.copyratings.away=Copiar las calificaciones del equipo visitante (código HT-ML)
 foxtrick.tweaks.ratingscopied=Las calificaciones han sido copiadas al portapapeles.
-foxtrick.tweaks.youthclub=Hattrick-Youthclub.org
+foxtrick.tweaks.youthclub=Hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copiar el reporte de entrenamiento al portapapeles
-foxtrick.tweaks.copyskilltable=Copiar la tabla de habilidades al portapapeles (códgio para el foro de HT-ML)
+foxtrick.tweaks.copyskilltable=Copiar la tabla de habilidades al portapapeles (código HT-ML para el foro)
 foxtrick.tweaks.copyscoutreport=Copiar el reporte del scout al portapapeles
 foxtrick.tweaks.scoutreportcopied=El comentario del scout ha sido copiado al portapapeles
 foxtrick.tweaks.copyplayerscource=Copiar código del jugador al portapapeles (pusado en hattrick-youthclub.org
@@ -808,6 +789,16 @@ foxtrick.htmsStatistics.windrawloss=Ganado/Empate/Perdido
 foxtrick.htmsStatistics.linkcaption=Análisis del partido por HTMS
 foxtrick.htmsStatistics.changePrediction=Cambiar predicción
 
+# HTMSPoints
+HTMSPoints=Puntos HTMS:
+HTMSPoints.AbilityAndPotential=Habilidad: %1 / Potencial: %2
+
+# CrossTable
+CrossTable.graph=Gráfica de la temporada
+CrossTable.table=Tabla Cruzada
+# will be shown as "R13" denoting round 13
+CrossTable.round=R%s
+
 #actions
 Copy=Copiar
 View=Vista
@@ -818,6 +809,21 @@ Filter=Filtro
 button.ok=OK
 button.cancel=Cancelar
 button.close=Cerrar
+button.customize=Personalizar
+button.save=Guardar
+button.go=Ir!
+button.authorize=Autorizar
+button.export=Exportar
+button.import=Importar
+button.restoreDefault=Restaurar predeterminado
+button.disableAll=Deshabilitar todo
+
+Loading=Cargando…
+
+oauth.authorize=Autorizar FoxTrick para accesar a los datos de tu equipo
+oauth.instructions=Una nueva página se abrirá en breve. Por favor ingresa tu nombre de usuario y contraseña de Hattrick para conseguir un código de vereificación. Copia el codigo aquí para autorizar a FoxTrick para accedera los datos de tu equipo:
+oauth.success=FoxTrick has sido autorizado correctamente! Por favor recarga la página para ver información detallada provista por Foxtrick
+oauth.unauthorized=Fallo al acceder a tus datos de Hattrick. Primero necesitar autorizar a Foxtrick para que acceda a tusdatos.
 
 # End of IN-GAME STRINGS.
 
@@ -842,22 +848,13 @@ foxtrick.prefs.AlertTab=Alerta
 foxtrick.prefs.AboutTab=Acerca de
 foxtrick.prefs.ChangesTab=Cambios
 foxtrick.prefs.HelpTab=Ayuda
-foxtrick.prefs.links=Enlaces a foro de preguntas y páginas de ayuda
-foxtrick.prefs.portal=Portal de Foxtrick
-foxtrick.prefs.external_forum=Foro Foxtrick
-foxtrick.prefs.hattrick_forum=Foro Foxtrick (dentro de Hattrick)
-foxtrick.prefs.commented_screenshots=Capturas de Pantalla comentadas
-foxtrick.prefs.hex_color_editor=Enlace a un editor hexadecimal de colores
 foxtrick.prefs.basicPreferences=Preferencias Básicas
 foxtrick.prefs.captionHTLanguage=Idioma
-foxtrick.prefs.captionHTCurrency=Divisa
 foxtrick.prefs.captionHTDateformat=Formato de Fecha
 foxtrick.prefs.captionHTCountry=País
 foxtrick.prefs.captionShowOnStatusBar=Icono de barra de estado
 foxtrick.prefs.captionCleanupBranch=Preferencias Guardadas
 foxtrick.prefs.captionLoadSavePrefs=Exportar o Importar preferencias
-foxtrick.prefs.captionCurrencySymbolTo=Convertir moneda actual a
-foxtrick.prefs.captionCurrencyConverter=Convertidor de divisas
 foxtrick.prefs.statusbarpref=Mostrar icono de Foxtrick en la barra de estado (require reiniciar)
 foxtrick.prefs.labelCleanupBranch=Restaurar valores predeterminados (Solo preferencias, sin ajustes personales. Requiere reiniciar.)
 foxtrick.prefs.labelDisableAll=Deshabilitar todos los módulos
@@ -865,21 +862,28 @@ foxtrick.prefs.labelSavePrefs=Exportar las preferencias y/o configuración perso
 foxtrick.prefs.labelSavePrefs_Prefs=Ppreferencias
 foxtrick.prefs.labelSavePrefs_Notes=Configuración personal (notas, plantillas y enlaces personalizados)
 foxtrick.prefs.labelLoadPrefs=Importar preferencias (Las preferencias pueden sobre escribirse. Requiere reiniciar)
+foxtrick.prefs.labelLoadPrefs=Importar preferencias (Las preferencias actuales serán sobreescritas)
+foxtrick.prefs.loadNotice=Pega tus preferencias guardadas en el cuadro de texto y presiona "Importar".
 foxtrick.prefs.captionDisableSettings=Deshabilitar Foxtrick
 foxtrick.prefs.stagepref=Desahabilitar en el servidor de Stage
 foxtrick.prefs.disableTemporaryLabel=Deshabilitar temporalmente
 foxtrick.prefs.saved=Preferencias Guardadas!
+foxtrick.prefs.loaded=Preferencias cargadas!
+foxtrick.prefs.dismissNotice=(clic para descartar este aviso)
 
-button.save=Guardar
-foxtrick.prefs.buttonCancel=Cancelar
-foxtrick.prefs.buttonReset=Resetear
-button.customize=Personalizar
-button.restoreDefault=Restaurar valores predeterminados
-button.disableAll=Deshabilitar todos
-button.export=Guardar
-button.import=Cargar
-foxtrick.prefs.activeCurrencyConverter=Habilitar convertidor de divisa
+link.title=Enlaces
+link.homepage=Página de inicio
+link.bugTracker=Reportar un error
+link.hattrickForum=Foro de Foxtrick en Hattrick
+link.screenshots=Captura de pantalla
+link.nightlyFirefox=Versiones en desarrollo para Firefox
+link.nightlyChrome=Versiones en desarrollo  para Google Chrome
+link.recentChanges=Cambios recientes
 
+foxtrick.showReleaseNotes=Mostrar notas de la versión luego de que Foxtrick se actualice
+foxtrick.versionReleaseNotes=Notas de la versión para:
+
+about.copyright=Copyright
 about.headDevelopers=Desarrolladores en Jefe
 about.projectOwners=Propietarios Proyecto
 about.developers=Desarrolladores
