Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6094 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -1,4 +1,4 @@
- # SERBIAN language file (rXXXX)
+# SERBIAN language file (rXXXX)
 # utf-8 encoded SERBIAN language file sr-RS
 # By ljushaff
 
@@ -672,7 +672,6 @@ foxtrick.onpagepreferences=Фокстрик опције
 foxtrick.modules_allpages=Модули који раде на свим страницама
 HTLanguageChanged=У Фокстрик опцијама сте подесили да аутоматски промените језичка подешавања кад год промените језик који користите на Хаттрику. Ваш језик у Фокстрику је сада пребачен на: %s.
 foxtrick.TwoWeekBalanceToogle=Кликни овде да промениш опције за приказивање двонедељне разлике.
-Screenshot=Слика са објашњењима опција за модул
 FoxtrickFirstRunHint=ПАЖЊА! Ова порука ће се приказивати све док је не затворите. Да би сте је видели опет, у Фокстрик главним опцијама, одаберите верзију за коју желите да видите промене. Ако поставите курсор миша изнад колоне 'Верзија' у табели изнад, такође ће вам бити приказане најновије промене али само на енглеском језику.
 #  NOTE TO TRANSLATORS
 # You can use the following string to link to release notes in your language. The link better be generic, as you might not translate before actual release, i.e. link should be valid for all relesase
@@ -879,6 +878,7 @@ status.active=укључен
 status.enabled=укључен, али неактиван на %s
 status.disabled=искључен
 
+prefs.screenshot=Слика са објашњењима опција за модул
 foxtrick.prefs.MainTab=Главне опције
 foxtrick.prefs.ShortcutsTab=Пречице и додаци
 foxtrick.prefs.PresentationTab=Изглед и алати
